[gd_scene load_steps=4 format=3 uid="uid://doilgrvsndvd8"]

[ext_resource type="FontFile" uid="uid://b1cjkihd4tofe" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_owwc6"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_qbu2a"]

[sub_resource type="LabelSettings" id="LabelSettings_6felp"]
font = ExtResource("1_owwc6")
font_size = 24

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 323.848
offset_right = -576.0
offset_bottom = -323.848
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbu2a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = -100.0
offset_right = 128.0
offset_bottom = 124.0
color = Color(0, 0, 0, 0.819608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"
label_settings = SubResource("LabelSettings_6felp")
horizontal_alignment = 1

[node name="Voltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_owwc6")
theme_override_font_sizes/font_size = 16
text = "Voltar ao Jogo"

[node name="Reiniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_owwc6")
theme_override_font_sizes/font_size = 16
text = "Reiniciar"

[node name="Menu_inicial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_owwc6")
theme_override_font_sizes/font_size = 16
text = "Menu Inicial"

[node name="Sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_owwc6")
theme_override_font_sizes/font_size = 16
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu_inicial" to="." method="_on_menu_inicial_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_sair_pressed"]
